--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ tokio = { version = "1.37.0", features = ["full"] }
 async-trait = "0.1.74"
 derive-new = "0.6.0"
 rstest = "0.18.2"
+uuid = { version = "1.4.0", features = ["v4", "serde"] }
+serde = { version = "1.0.174", features = ["derive"] }
+thiserror = "1.0.44"
 
 [dependencies]
 adapter.workspace = true
